[package]
name = "qargparser"
version = "0.5.4"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
keywords = [ "cli", "commandline", "argument", "parser" ]
repository = "https://github.com/openqrnch/qargparser"
description = "Argument parser."

[dependencies]
qpprint = { version = "0.1.1" }

